--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@types/bcryptjs": "^3.0.0",
+    "@types/nodemailer": "^7.0.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "next": "15.5.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "prisma": "^6.17.1",
     "react": "19.1.0",
