--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/client": "^6.17.1",
+    "@mermaid-js/mermaid-cli": "^11.12.0",
+    "@prisma/client": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -34,7 +35,6 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
-    "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
@@ -48,8 +48,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "docx": "^9.5.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
+    "marked": "^16.4.1",
+    "prisma": "^6.18.0",
+    "puppeteer": "^24.28.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
